--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,21 +58,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:clickable="true" />
+                android:clickable="true"
+                android:enabled="false" />
 
             <CheckBox
                 android:id="@+id/d2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:clickable="true" />
+                android:clickable="true"
+                android:enabled="false" />
 
             <CheckBox
                 android:id="@+id/d3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:clickable="true" />
+                android:clickable="true"
+                android:enabled="false" />
         </LinearLayout>
 
         <LinearLayout
@@ -109,14 +112,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:clickable="true" />
+                android:clickable="true"
+                android:enabled="false" />
 
             <CheckBox
                 android:id="@+id/d5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:clickable="true" />
+                android:clickable="true"
+                android:enabled="false" />
         </LinearLayout>
 
         <LinearLayout
@@ -131,6 +136,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:clickable="true"
+                android:onClick="Alerta"
                 android:text="Lanzar Todos" />
 
             <Button
@@ -139,8 +145,9 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:clickable="true"
-                android:onClick="Fin"
-                android:text="Lanzar Seleccionados" />
+                android:onClick="Intento"
+                android:text="Lanzar Seleccionados"
+                android:enabled="false" />
     </LinearLayout>
 </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
