--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -192,7 +192,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/iguales"
@@ -201,6 +201,14 @@
                 android:layout_weight="1"
                 android:gravity="center|center_horizontal|center_vertical"
                 android:text="0 iguales= +0 puntos" />
+
+            <TextView
+                android:id="@+id/resultado"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center|center_horizontal|center_vertical"
+                android:text="0 puntos" />
         </LinearLayout>
 
         <LinearLayout
@@ -211,8 +219,8 @@
 
             <Button
                 android:id="@+id/regreso"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="610dp"
                 android:layout_weight="1"
                 android:clickable="true"
                 android:onClick="JuegoNuevo"
