--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -219,8 +219,8 @@
 
             <Button
                 android:id="@+id/regreso"
-                android:layout_width="0dp"
-                android:layout_height="610dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:clickable="true"
                 android:onClick="JuegoNuevo"
